--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@angular/router": "^7.2.0",
     "@ng-bootstrap/ng-bootstrap": "^4.2.1",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
     "express": "^4.17.1",
+    "ng2-charts": "^2.2.3",
     "path": "^0.12.7",
     "rxjs": "^6.5.2",
     "tslib": "^1.9.0",
